# vuxe

./: .env.example  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yml
.forgejo/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 001_create_users.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/auth/: clerk.rs  middleware.rs  mod.rs  oidc.rs  session.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs  health.rs  mod.rs
mobile/: build.gradle.kts  gradle.properties  settings.gradle.kts
mobile/composeApp/: build.gradle.kts
mobile/composeApp/src/androidMain/: AndroidManifest.xml
mobile/composeApp/src/androidMain/kotlin/com/vuxe/app/: MainActivity.kt
mobile/composeApp/src/androidMain/res/values/: strings.xml  themes.xml
mobile/composeApp/src/commonMain/kotlin/com/vuxe/app/: App.kt
mobile/composeApp/src/commonMain/kotlin/com/vuxe/app/network/: ApiClient.kt
mobile/composeApp/src/iosMain/kotlin/com/vuxe/app/: MainViewController.kt
mobile/gradle/: libs.versions.toml
mobile/iosApp/: README.md
mobile/iosApp/iosApp/: Info.plist  VuxeApp.swift
